# sharelatex-dockerized

./: .env  README.md  check.py  docker-compose-base.yml  docker-compose-consul-core.yml  docker-compose-consul-edge.yml  docker-compose-core.yml  docker-compose-edge.yml  docker-compose-hello-web.yml  docker-compose-koala-core.yml  docker-compose-koala-edge.yml  docker-compose-stack.yml  docker-compose.yml  utilities.txt
deployment/enos_sharelatex/: .gitignore  .travis.yml  MANIFEST.in  README.rst  conf.yaml  setup.cfg  test-requirements.txt  tox.ini
deployment/enos_sharelatex/docs/: conf.py  index.rst
deployment/enos_sharelatex/enos_sharelatex/: __init__.py  cli.py  constants.py  tasks.py
deployment/enos_sharelatex/enos_sharelatex/ansible/: site.yml
deployment/enos_sharelatex/enos_sharelatex/ansible/roles/common/tasks/: backup.yml  deploy.yml  destroy.yml
deployment/enos_sharelatex/enos_sharelatex/ansible/roles/core/tasks/: deploy.yml  destroy.yml
deployment/enos_sharelatex/enos_sharelatex/ansible/roles/docker/tasks/: destroy.yml  main.yml
deployment/enos_sharelatex/enos_sharelatex/ansible/roles/edge/tasks/: deploy.yml  destroy.yml
deployment/enos_sharelatex/enos_sharelatex/ansible/roles/pumba/tasks/: deploy.yml  destroy.yml  main.yml
deployment/enos_sharelatex/enos_sharelatex/tests/unit/: test_enos_sharelatex.py
sharelatex-base/: Dockerfile
sharelatex-chat/: Dockerfile  settings.defaults.coffee
sharelatex-chat-docker/: Dockerfile  settings.defaults.coffee
sharelatex-clsi/: Dockerfile
sharelatex-clsi-docker/: Dockerfile
(+50 files in other folders)
